--- a/dhlk_tenant_plat/dhlk_basic_module_service/src/main/resources/application-pro.yml
+++ b/dhlk_tenant_plat/dhlk_basic_module_service/src/main/resources/application-pro.yml
@@ -93,3 +93,5 @@ captcha:
 #      template-image: "F:\\attchment\\verifyImages\\templates"
       origin-image: "/home/software/attachment/verifyImages/originImage"
       template-image: "/home/software/attachment/verifyImages/templates"
+dog:
+  check: false
