--- a/dhlk_tenant_plat/dhlk_appstore/pom.xml
+++ b/dhlk_tenant_plat/dhlk_appstore/pom.xml
@@ -72,11 +72,21 @@
             <scope>runtime</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.dhlk.product.plat</groupId>
+            <artifactId>dhlk_shiro</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.dhlk.product.plat</groupId>
             <artifactId>dhlk.entity</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dhlk.product.plat</groupId>
+            <artifactId>dhlk_shiro</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
